FIX: TL Queue: do not show page in [[Category:Producer categories]], fix dark mode on Vector

--- a/src/gadgets/core/vlw-tl-queue-display/vlw-tl-queue-display.less
+++ b/src/gadgets/core/vlw-tl-queue-display/vlw-tl-queue-display.less
@@ -1,4 +1,4 @@
-/* 
+/*
 * Gadget-vlw-tl-queue-display
 *
 * CSS Variables:
@@ -68,13 +68,13 @@
     font-size: 1rem;
     font-weight: bold;
     margin-top: 10px;
-    
+
     &:hover {
       background-color: var(--tl-queue-heading-bg-color-hover, #e4c79f);
       transition: 1s;
       color: var(--tl-queue-heading-color-hover, #a26e6e) !important;
     }
-  } 
+  }
 
   .subheading {
     background-color: var(--tl-queue-subheading-bg-color, #fff5e8);
@@ -226,7 +226,7 @@ body.skin-citizen .citizen-footer__container #vlw-tl-queue-container {
 
 /* Vector 2022 */
 body.skin-vector-2022 {
-  #mw-panel #vlw-tl-queue-container, 
+  #mw-panel #vlw-tl-queue-container,
   .mw-footer-container #vlw-tl-queue-container {
     padding-top: 5px;
     border-width: 1px;
@@ -279,7 +279,7 @@ body.skin-citizen {
   }
 }
 
-html.theme-light, html.skin-theme-clientpref-day:not(.skin-theme-clientpref-night) {
+html.theme-light:not(.skin-theme-clientpref-night), html.skin-theme-clientpref-day:not(.skin-theme-clientpref-night) {
   body.skin-timeless {
     --tl-queue-container-bg-color: #f8f9fa;
     --tl-queue-container-border-color: #eaecf0;
